--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<h1>Pruebas con git</h1>
 		<a href="pagina1.html">Pagina1</a>
 		<p>Cambios en el propio commit</p>
+		<p>Cambios en el propio commit</p>
 	</body>
 </html>
