--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		<a href="pagina1.html">Pagina1</a>
 		<p>Cambios en el propio commit</p>
 		<p>Cambios en el propio commit</p>
+		<p>Cambios en el propio commit</p>
 	</body>
 </html>
