--- a/pagina1.html
+++ b/pagina1.html
@@ -8,5 +8,6 @@
 		<h1>Pagina 1</h1>
 		<a href="index.html">index</a>
 		<a href="index.html">index</a>
+		<a href="index.html">index</a>
 	</body>
 </html>
