Forzar conflicto master

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Pagina web</title>
 	</head>
 	<body>
-		<h1>Pruebas con git</h1>
+		<h1>Pruebas con git rama Master</h1>
 		<a href="pagina1.html">Pagina1</a>
 		<p>Cambios en el propio commit</p>
 		<p>Cambios en el propio commit</p>
